--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>business</title>
+    <title>名鉴</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
+		<meta name="renderer" content="webkit">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telphone=no, email=no" />
+    <meta name="keywords" content="名鉴" />
+		<meta name="description" content="名鉴" />
     <script>
       var oInnerWidth;
       if(window.innerWidth){
@@ -25,7 +30,7 @@
   </head>
   <body>
     <div id="app">
-    	<router-view></router-view>
+    	
     </div>
     <!-- built files will be auto injected -->
 
@@ -34,5 +39,10 @@
       <script type="text/javascript" src="./static/js/excanvas.compiled.js"></script>
       <script type="text/javascript" src="./static/js/PIE.htc"></script>
     <![endif]-->
+    
+    <script src='static/js/jquery.js'></script>
+    <script src="static/js/selectArea/dialog.js"></script>
+    <script src="static/js/selectArea/mobile-select-area.js"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=VZ8YiyoIzbIeEfwK7hF5GbGZHMPGOG2s"></script>
   </body>
 </html>
