添加部分js效果

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <script type="text/javascript" src="./static/js/PIE.htc"></script>
     <![endif]-->
     
+    <script src="static/js/JsExtension.js"></script>
     <script src='static/js/jquery.js'></script>
     <script src="static/js/selectArea/dialog.js"></script>
     <script src="static/js/selectArea/mobile-select-area.js"></script>
