--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta name="renderer" content="webkit">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telphone=no, email=no" />
-    <meta name="keywords" content="名鉴" />
-		<meta name="description" content="名鉴" />
+    <meta name="keywords" content="奢侈品箱包、珠宝、手表、服装" />
+		<meta name="description" content="一个二手兼一手奢侈品交易平台，主要经营箱包、珠宝、手表、服装等，可以在平台上进行买卖交易" />
     <script>
       var oInnerWidth;
       if(window.innerWidth){
@@ -30,6 +30,7 @@
   </head>
   <body>
     <div id="app">
+    	
     	
     </div>
     <!-- built files will be auto injected -->
